@@ -59,6 +59,7 @@ ChangeLog
       anyway and CMake now works good with MSVC.
 [-] * Script gammu-config supports also cdialog.
 [-] * Reduce stack usage on message composing (fixes crash on Windows).
+[-] * Fixed returned saved location on AT engine.
     
 20081219 - 1.22.1
 
